--- a/views/teacher/teacher_add.html
+++ b/views/teacher/teacher_add.html
@@ -35,24 +35,28 @@
                 <label for=""  class="col-xs-3 control-label">姓名</label>
 
                 <div class="col-xs-4">
-                    <input type="text" name="tc_name" value='{{tc_name}}' class="form-control input-sm" placeholder="讲师名称">
+                    <input data-required data-description='tcName' data-describedby='tcNameInfo' type="text" name="tc_name" value='{{tc_name}}' class="form-control input-sm" placeholder="讲师名称">
                 </div>
+                <div class="col-xs-2" id="tcNameInfo"></div>
             </div>
+
             {{if !tc_id}}
             <div class="form-group">
                 <label for="" class="col-xs-3 control-label">密码</label>
 
                 <div class="col-xs-4">
-                    <input type="password" name="tc_pass" class="form-control input-sm">
+                    <input data-required data-description='tcPass' data-describedby='tcPassInfo' data-pattern='^\d{6}$' type="password" name="tc_pass" class="form-control input-sm">
                 </div>
+                <div class="col-xs-2" id="tcPassInfo"></div>
             </div>
             {{/if}}
             <div class="form-group">
                 <label for=""  class="col-xs-3 control-label">入职时间</label>
 
                 <div class="col-xs-4">
-                    <input data-provide="datepicker" data-date-language='zh-CN' data-date-format='yyyy-mm-dd' name="tc_join_date" type="text" value='{{tc_join_date}}' class="form-control input-sm">
+                    <input data-required data-description="tcJoinDate" data-describedby="tcJoinDateInfo" data-provide="datepicker" data-date-language='zh-CN' data-date-format='yyyy-mm-dd' name="tc_join_date" type="text" value='{{tc_join_date}}' class="form-control input-sm">
                 </div>
+                <div class="col-xs-2" id="tcJoinDateInfo"></div>
             </div>
             <div class="form-group">
                 <label for="" class="col-xs-3 control-label">类型</label>
@@ -78,7 +82,7 @@
             </div>
             <div class="form-group">
                 <div class="col-xs-7">
-                    <input id="teacherBtn" type="button" value="提交" class="btn btn-success btn-sm pull-right"/>
+                    <input id="teacherBtn" type="submit" value="提交" class="btn btn-success btn-sm pull-right"/>
 
                 </div>
             </div>
